@@ -5,11 +5,12 @@ LDFLAGS = -lm -lrt
 
 CFLAGS += $(ERROR_FLAGS)
 
-OBJ_RANDS = isaac.o	   \
-			isaac_x64.o\
-			parisi.o   \
-			well.o     \
-			well_x64.o \
+OBJ_RANDS = isaac.o	    \
+			isaac_x64.o \
+			parisi.o    \
+			parisi_sse.o\
+			well.o      \
+			well_x64.o  \
 			xorshift.o
 OBJ_RANDS_FINAL = rands.o
 LIB_RANDS_FINAL = librands.a
@@ -23,6 +24,7 @@ rands: $(OBJ_RANDS)
 isaac.o: isaac.c
 isaac_x64.o: isaac_x64.c
 parisi.o: parisi.c
+parisi_sse.o: parisi_sse.c
 well.o: well.c
 well_x64.o: well_x64.c
 xorshift.o: xorshift.c
